<resources>
    <string name="app_name">Kata (Beta)</string>
    <string name="style">Style</string>
    <string name="bigbang_hold_tip">Try to hold and copy ↓</string>
    <string name="initializing_database">Initializing database…</string>
    <string name="example_sentence">日本語は、主に日本国内や日本人同士の間で使われている言語である。日本は法令によって公用語を規定していないが、法令その他の公用文は全て日本語で記述され、各種法令において日本語を用いることが定められ、学校教育においては「国語」として教えられるなど、事実上、唯一の公用語となっている。</string>
    <string name="copy">Copy</string>
    <string name="nothing_happened">Nothing happened?</string>
    <string name="nothing_happened_detail">Try to\n\n- Go phone settings\n- Apps\n- Kata\n- Draw over other apps\n- ENABLE IT!</string>
    <string name="cannot_open_overlay_permission_settings">Can\'t open \"Draw over other apps\" settings, please enable it in your phone\'s settings manually</string>
    <string name="cancelled">Cancelled</string>
    <string name="enhanced_mode">Enhanced mode</string>
    <string name="enhanced_mode_summary">Prevent killed by system</string>
    <string name="disable_for_one_minute">Disable for one minute</string>
    <string name="disable_for_one_minute_tip">Tip: Long click icon to disable web page parser temporarily</string>
    <string name="deleted_sth">Deleted %1$s</string>
    <string name="redo">Redo</string>
    <string name="set_alias">Set alias</string>
    <string name="star">Star</string>

    <string name="lyric">Lyric</string>

    <string name="about">About</string>
    <string name="description">Kata (片) - A Japanese text segmentation app\n</string>
    <string name="homepage">HomePage</string>
    <string name="review">Review</string>
    <string name="search">Search</string>
    <string name="no_result">No result</string>
    <string name="developer">Developer</string>
    <string name="dacer">Dacer</string>

    <string name="settings">Settings</string>
    <string name="enable">Enable</string>
    <string name="default_search_engine">Default search engine</string>
    <string name="bigbang_style">Style</string>
    <string name="copied">Copied</string>
    <string name="text_size">Text size</string>
    <string name="furigana_text_size">Furigana text size</string>
    <string name="line_spacing">Line spacing</string>
    <string name="word_spacing">Word spacing</string>
    <string name="not_found_error">Sorry, couldn\'t find anything matching %1$s</string>
    <string name="permission_error_overlay">\"Draw over other apps\" need to be permitted</string>
    <string name="show_float_dialog_when_copy_few_words">Show float dialog when copy few words</string>
    <string name="translate_to">Dictionary language</string>
    <string name="how_it_works">How it works</string>
    <string name="listen_to_clipboard">Listen to clipboard</string>
    <string name="cache">Cache</string>
    <string name="max">Max</string>
    <string name="clear_cache">Clear cache</string>

    <string name="tts_error_title">Text-to-speech not work</string>
    <string name="tts_error_content">Try to:\n\nSettings - Accessibility - Text-to-speech output - Select Google TTS Engine and install Japanese voice data</string>

    <string name="fetching_content_from_web_page">Fetching content from web page…</string>
    <string name="web_page_parser">Web page parser</string>
    <string name="web_page_parser_mercury">Mercury</string>
    <string name="web_page_parser_url2io">URL2io</string>
    <string name="web_page_parser_not_use">Do not use</string>
</resources>
