<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/enable"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/listenClipboardSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/searchEngine"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/default_search_engine"/>

        <TextView
            android:id="@+id/searchEngineTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            tools:text="Google"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/translationTarget"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/translate_to"/>

        <TextView
            android:id="@+id/translationTargetTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            tools:text="English"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bigbangStyle"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/bigbang_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            tools:text=">"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/show_float_dialog_when_copy_few_words"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/showFloatDialogSwit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

</LinearLayout>